# ald-checker

./: .env.example  .gitignore  CLAUDE.md  README.md  config.toml  pyproject.toml
src/ald_checker/: __init__.py  checks.py  cli.py  llm.py  reference.py
