[project]
name = "ald-checker"
version = "0.2.0"
description = "ALD output quality checker — validates and fixes asset location CSVs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = ["ald", "asset-location", "csv", "data-quality", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "cleanco>=2.3",
]

[project.optional-dependencies]
llm = ["litellm>=1.0"]
xlsx = ["openpyxl>=3.1"]
geo = ["reverse_geocoder>=1.5", "global-land-mask>=1.0"]
all = ["litellm>=1.0", "openpyxl>=3.1", "reverse_geocoder>=1.5", "global-land-mask>=1.0"]
test = ["pytest>=8.0"]
db = ["psycopg[binary]>=3.1"]

[project.scripts]
ald-check = "ald_checker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ald_checker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
